--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -2383,7 +2383,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "2ad25b08",
+   "id": "ecbdf48b",
    "metadata": {},
    "source": [
     "# Casting array eleemt from one type other data type \n",
@@ -2540,7 +2540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "882a3e05",
+   "id": "c1454347",
    "metadata": {},
    "source": [
     "### 2.using ndenumerate()"
@@ -2548,7 +2548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fed6cccb",
+   "id": "fd3b2c72",
    "metadata": {},
    "source": [
     "enumeration means mentioing sequence number of something one by one \n",
@@ -2625,7 +2625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5c909a2",
+   "id": "9ddcec05",
    "metadata": {},
    "source": [
     "## joining Array\n"
@@ -2633,7 +2633,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaa27b45",
+   "id": "8f1afc49",
    "metadata": {},
    "source": [
     "##### while joining array we should remember \"both arrays should have same dimention\""
@@ -2641,7 +2641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5708fa7b",
+   "id": "048adcad",
    "metadata": {},
    "source": [
     "#### using concatenation"
@@ -2650,7 +2650,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "6f67382b",
+   "id": "01e0dff3",
    "metadata": {},
    "outputs": [
     {
@@ -2672,7 +2672,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "d10aa164",
+   "id": "2f5aca64",
    "metadata": {},
    "outputs": [
     {
@@ -2713,7 +2713,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5bec47a",
+   "id": "410dfbeb",
    "metadata": {},
    "source": [
     "### 2.using stack fuction \n",
@@ -2724,7 +2724,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "79bcba8f",
+   "id": "69a2f81d",
    "metadata": {},
    "outputs": [
     {
@@ -2755,7 +2755,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93f90614",
+   "id": "efa36c65",
    "metadata": {},
    "source": [
     "#### 2.1 using \"vstack function(\""
@@ -2764,7 +2764,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "a2e2ec96",
+   "id": "53481921",
    "metadata": {},
    "outputs": [
     {
@@ -2787,7 +2787,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4250c81",
+   "id": "910e0b47",
    "metadata": {},
    "source": [
     "#### 2.3 using \"dstack fuction()\""
@@ -2796,7 +2796,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "8172452a",
+   "id": "3c41fc44",
    "metadata": {},
    "outputs": [
     {
@@ -2821,7 +2821,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "cdf87bd1",
+   "id": "eb19c3ad",
    "metadata": {},
    "outputs": [
     {
@@ -2852,7 +2852,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23f723e0",
+   "id": "a03eb7cf",
    "metadata": {},
    "source": [
     "### Spliting Array"
@@ -2860,7 +2860,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d2a60ad",
+   "id": "487ed08e",
    "metadata": {},
    "source": [
     "##### joining meres multiple arrays into ne and spltting\n",
@@ -2875,7 +2875,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "2f190b07",
+   "id": "6ce91541",
    "metadata": {},
    "outputs": [
     {
@@ -2907,7 +2907,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "2743568d",
+   "id": "08949dfc",
    "metadata": {},
    "outputs": [
     {
@@ -2947,18 +2947,107 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 117,
+   "id": "017ab3a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "[array([[1, 2, 3]]), array([[4, 5, 6]])]\n",
+      "****************************************************************************************************\n",
+      "[[1 2 3]]\n",
+      "[[4 5 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# using axis \n",
+    "\n",
+    "arr = np.array([[1,2,3],[4,5,6]])\n",
+    "print(arr)\n",
+    "\n",
+    "newarr=np.split(arr,2,axis=0)\n",
+    "print(newarr)\n",
+    "\n",
+    "print('*'*100)\n",
+    "\n",
+    "for i in newarr:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "66b7d122",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6]\n",
+      "[array([1, 2]), array([3, 4]), array([5, 6])]\n",
+      "[1 2]\n",
+      "[3 4]\n",
+      "[5 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([1,2,3,4,5,6])\n",
+    "print(arr)\n",
+    "newarr = np.split (arr,3)\n",
+    "# newarr = np.split (arr,4)# this will raise an value error\n",
+    "print(newarr)\n",
+    "\n",
+    "for i in newarr:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d075c003",
+   "metadata": {},
+   "source": [
+    "2. array_split()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2138e6bf",
+   "metadata": {},
+   "source": [
+    "if no of ele,ment are less tan it adjust in last array\n",
+    "\n",
+    "it dones raise error this will adjust the element in array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a47bc40b",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "8881fab8",
+   "id": "09f22bd1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# "
+    "arr = np.array([1,2,3,4,5,6])\n",
+    "\n",
+    "new"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0edcfab2",
+   "id": "7040f69e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2966,7 +3055,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf19aefd",
+   "id": "461e15ad",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2974,7 +3063,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "562bc844",
+   "id": "40efc244",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2982,7 +3071,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f942a5bf",
+   "id": "fa7d8f30",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2990,7 +3079,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56f6efd7",
+   "id": "a6f11c9c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2998,7 +3087,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a73e12da",
+   "id": "ee2c772c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3006,7 +3095,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0fdb533",
+   "id": "27bc442a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3014,7 +3103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a28aee2",
+   "id": "281c9eb4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3022,7 +3111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8be74336",
+   "id": "77debff5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3030,7 +3119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dba092e",
+   "id": "9db2d444",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3038,7 +3127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8116f0f",
+   "id": "b9354ac5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3046,7 +3135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7007f51",
+   "id": "ce361f0e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3054,7 +3143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bb36afb",
+   "id": "a8e84673",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3062,7 +3151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68aab556",
+   "id": "910f2e56",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3070,7 +3159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80073e5c",
+   "id": "08236a5b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3078,7 +3167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e6b6fd5",
+   "id": "db950dd7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3086,47 +3175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60997050",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5aa37735",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "db715560",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e2d349e6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e2cb4f61",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f92fd718",
+   "id": "6dda2241",
    "metadata": {},
    "outputs": [],
    "source": []
