--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -2361,7 +2361,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<numpy.nditer object at 0x00000203DDAA9B10>\n",
+      "<numpy.nditer object at 0x000001ACD794CAD0>\n",
       "1\n",
       "2\n",
       "3\n",
@@ -2401,7 +2401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 81,
    "id": "7bab34b8",
    "metadata": {},
    "outputs": [
@@ -2411,7 +2411,12 @@
      "text": [
       "(1+0j)\n",
       "(2+0j)\n",
-      "(3+0j)\n"
+      "(3+0j)\n",
+      "(4+0j)\n",
+      "(88+0j)\n",
+      "(88+0j)\n",
+      "(3939+0j)\n",
+      "(999+0j)\n"
      ]
     }
    ],
@@ -2422,7 +2427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 82,
    "id": "7e72fcc3",
    "metadata": {},
    "outputs": [
@@ -2449,7 +2454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 83,
    "id": "4e05418e",
    "metadata": {},
    "outputs": [
@@ -2472,7 +2477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 84,
    "id": "b4260f5c",
    "metadata": {},
    "outputs": [
@@ -2508,7 +2513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 85,
    "id": "46275c89",
    "metadata": {},
    "outputs": [
@@ -2560,7 +2565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 86,
    "id": "ca6226a1",
    "metadata": {},
    "outputs": [
@@ -2592,7 +2597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 87,
    "id": "2ba1dcb5",
    "metadata": {},
    "outputs": [
@@ -2649,7 +2654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 88,
    "id": "01e0dff3",
    "metadata": {},
    "outputs": [
@@ -2671,7 +2676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 89,
    "id": "2f5aca64",
    "metadata": {},
    "outputs": [
@@ -2723,7 +2728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 90,
    "id": "69a2f81d",
    "metadata": {},
    "outputs": [
@@ -2763,7 +2768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 91,
    "id": "53481921",
    "metadata": {},
    "outputs": [
@@ -2795,7 +2800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 92,
    "id": "3c41fc44",
    "metadata": {},
    "outputs": [
@@ -2820,7 +2825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 93,
    "id": "eb19c3ad",
    "metadata": {},
    "outputs": [
@@ -2874,7 +2879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 94,
    "id": "6ce91541",
    "metadata": {},
    "outputs": [
@@ -2906,7 +2911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 95,
    "id": "08949dfc",
    "metadata": {},
    "outputs": [
@@ -2947,7 +2952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 96,
    "id": "017ab3a0",
    "metadata": {},
    "outputs": [
@@ -2981,7 +2986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 97,
    "id": "66b7d122",
    "metadata": {},
    "outputs": [
@@ -3034,14 +3039,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "id": "09f22bd1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([1, 2, 3]), array([4, 5, 6])]\n"
+     ]
+    }
+   ],
    "source": [
     "arr = np.array([1,2,3,4,5,6])\n",
     "\n",
-    "new"
+    "newarr = np.array_split(arr,2)\n",
+    "print(newarr)"
    ]
   },
   {
@@ -3050,7 +3064,9 @@
    "id": "7040f69e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "newarr= np.array_aplit()"
+   ]
   },
   {
    "cell_type": "code",
