--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -3104,37 +3104,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 109,
    "id": "40efc244",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Field elements must be 2- or 3-tuples, got '11'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [108], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# splitg on 2-D array \u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m arr \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m6\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m7\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m8\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m9\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m11\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m12\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m newarr\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39marray_split(arr,\u001b[38;5;241m3\u001b[39m)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(newarr)\n",
-      "\u001b[1;31mTypeError\u001b[0m: Field elements must be 2- or 3-tuples, got '11'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([[1, 2],\n",
+      "       [3, 4]]), array([[5, 6],\n",
+      "       [7, 8]]), array([[ 9, 10],\n",
+      "       [11, 12]])]\n"
      ]
     }
    ],
    "source": [
     "# splitg on 2-D array \n",
     "\n",
-    "arr = np.array([[1,2],[3,4],[5,6],[7,8],9,10],[11,12])\n",
+    "arr = np.array([[1,2],[3,4],[5,6],[7,8],[9,10],[11,12]])\n",
     "newarr=np.array_split(arr,3)\n",
     "print(newarr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "id": "fa7d8f30",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "closing parenthesis ']' does not match opening parenthesis '(' (364855573.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn [110], line 3\u001b[1;36m\u001b[0m\n\u001b[1;33m    array([[9,10],11,12]])]\u001b[0m\n\u001b[1;37m                        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m closing parenthesis ']' does not match opening parenthesis '('\n"
+     ]
+    }
+   ],
+   "source": [
+    "[array([[1,2],[3,4],\n",
+    "        array[[5,6],[7,8]],\n",
+    "        array([[9,10],11,12]])]\n",
+    "       \n",
+    "newarr np.array_split(arr,2,axis=1)\n",
+    "print(newarr)\n",
+    "       "
+   ]
   },
   {
    "cell_type": "code",
