--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -3129,25 +3129,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 113,
    "id": "fa7d8f30",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "closing parenthesis ']' does not match opening parenthesis '(' (364855573.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn [110], line 3\u001b[1;36m\u001b[0m\n\u001b[1;33m    array([[9,10],11,12]])]\u001b[0m\n\u001b[1;37m                        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m closing parenthesis ']' does not match opening parenthesis '('\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([[ 1],\n",
+      "       [ 3],\n",
+      "       [ 5],\n",
+      "       [ 7],\n",
+      "       [ 9],\n",
+      "       [11]]), array([[ 2],\n",
+      "       [ 4],\n",
+      "       [ 6],\n",
+      "       [ 8],\n",
+      "       [10],\n",
+      "       [12]])]\n"
      ]
     }
    ],
    "source": [
-    "[array([[1,2],[3,4],\n",
-    "        array[[5,6],[7,8]],\n",
-    "        array([[9,10],11,12]])]\n",
+    "arr=np.array([[1,2],\n",
+    "        [3,4],\n",
+    "        [5,6],\n",
+    "        [7,8],\n",
+    "        [9,10],\n",
+    "        [11,12]])\n",
     "       \n",
-    "newarr np.array_split(arr,2,axis=1)\n",
+    "newarr =np.array_split(arr,2,axis=1)\n",
     "print(newarr)\n",
     "       "
    ]
@@ -3158,7 +3170,13 @@
    "id": "a6f11c9c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "arr = np .array([[1,2],[3,4],[5,6],[9,10],[11,12]])\n",
+    "\n",
+    "newarr=np.array_split(arr,2,axis=1)\n",
+    "\n",
+    "fo"
+   ]
   },
   {
    "cell_type": "code",
