--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -3166,16 +3166,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "id": "a6f11c9c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1]\n",
+      " [ 3]\n",
+      " [ 5]\n",
+      " [ 7]\n",
+      " [ 9]\n",
+      " [11]] \n",
+      "\n",
+      "[[ 2]\n",
+      " [ 4]\n",
+      " [ 6]\n",
+      " [ 8]\n",
+      " [10]\n",
+      " [12]] \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "arr = np .array([[1,2],[3,4],[5,6],[9,10],[11,12]])\n",
+    "arr = np.array([[1,2],[3,4],[5,6],[7,8],[9,10],[11,12]])\n",
     "\n",
     "newarr=np.array_split(arr,2,axis=1)\n",
     "\n",
-    "fo"
+    "for i in newarr:\n",
+    "    print(i,'\\n')"
    ]
   },
   {
