--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -3166,8 +3166,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 117,
    "id": "a6f11c9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [3 4]] \n",
+      "\n",
+      "[[5 6]\n",
+      " [7 8]] \n",
+      "\n",
+      "[[ 9 10]] \n",
+      "\n",
+      "[[11 12]] \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([[1,2],[3,4],[5,6],[7,8],[9,10],[11,12]])\n",
+    "\n",
+    "newarr=np.array_split(arr,4,axis=0)\n",
+    "\n",
+    "for i in newarr:\n",
+    "    print(i,'\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "ee2c772c",
    "metadata": {},
    "outputs": [
     {
@@ -3192,8 +3224,7 @@
     }
    ],
    "source": [
-    "arr = np.array([[1,2],[3,4],[5,6],[7,8],[9,10],[11,12]])\n",
-    "\n",
+    "arr=np.array([[1,2],[3,4],[5,6],[7,8],[9,10],[11,12]])\n",
     "newarr=np.array_split(arr,2,axis=1)\n",
     "\n",
     "for i in newarr:\n",
@@ -3202,27 +3233,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ee2c772c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "id": "27bc442a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([[ 1],\n",
+      "       [ 4],\n",
+      "       [ 7],\n",
+      "       [10],\n",
+      "       [13],\n",
+      "       [16]]), array([[ 2],\n",
+      "       [ 5],\n",
+      "       [ 8],\n",
+      "       [11],\n",
+      "       [14],\n",
+      "       [17]]), array([[ 3],\n",
+      "       [ 6],\n",
+      "       [ 9],\n",
+      "       [12],\n",
+      "       [15],\n",
+      "       [18]])]\n",
+      "****************************************************************************************************\n",
+      "[[ 1  2  3]\n",
+      " [ 4  5  6]\n",
+      " [ 7  8  9]\n",
+      " [10 11 12]\n",
+      " [13 14 15]\n",
+      " [16 17 18]] \n",
+      "\n",
+      "[array([[1, 2, 3],\n",
+      "       [4, 5, 6]]), array([[ 7,  8,  9],\n",
+      "       [10, 11, 12]]), array([[13, 14, 15],\n",
+      "       [16, 17, 18]])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Array splitting on axis\n",
+    "arr = np.array([[1, 2, 3], \n",
+    "                [4, 5, 6], \n",
+    "                [7, 8, 9], \n",
+    "                [10, 11, 12], \n",
+    "                [13, 14, 15], \n",
+    "                [16, 17, 18]])\n",
+    "\n",
+    "# print(arr)\n",
+    "\n",
+    "newarr = np.array_split(arr, 3, axis=1)\n",
+    "\n",
+    "print(newarr) \n",
+    "\n",
+    "print('*'*100)\n",
+    "print(arr,'\\n')\n",
+    "newarr = np.array_split(arr, 3, axis=0)\n",
+    "\n",
+    "print(newarr)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "281c9eb4",
+   "cell_type": "markdown",
+   "id": "f0e4df18",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### "
+   ]
   },
   {
    "cell_type": "code",
