--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -3296,10 +3296,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0e4df18",
+   "id": "219684d2",
    "metadata": {},
    "source": [
-    "#### "
+    "#### 3. Using hsplit()opposite of h stack()"
    ]
   },
   {
@@ -3308,7 +3308,9 @@
    "id": "77debff5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "arr = np.array([[1,2,3],])"
+   ]
   },
   {
    "cell_type": "code",
