--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -3296,7 +3296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84ef95f1",
+   "id": "fd3c0615",
    "metadata": {},
    "source": [
     "#### 3. Using hsplit()opposite of h stack()"
@@ -3360,7 +3360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3577e109",
+   "id": "da52865c",
    "metadata": {},
    "source": [
     "###  Searching Arrays"
@@ -3368,7 +3368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ede338b1",
+   "id": "5364f75b",
    "metadata": {},
    "source": [
     "### The \"where\" method is used for searching the array"
@@ -3376,7 +3376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1f981ce",
+   "id": "9127d1bc",
    "metadata": {},
    "source": [
     "#### 1. Where "
@@ -3409,11 +3409,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 233,
    "id": "ce361f0e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "\n",
+      "Addition: [[2 3 4]\n",
+      " [5 6 7]]\n",
+      "\n",
+      "subtractoion: [[0 1 2]\n",
+      " [3 4 5]]\n",
+      "\n",
+      "multiplication: [[ 2  4  6]\n",
+      " [ 8 10 12]]\n",
+      "\n",
+      "Division: [[0.5 1.  1.5]\n",
+      " [2.  2.5 3. ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Arthmatic opration an numpy array\n",
+    "\n",
+    "arr = np .array([[1,2,3],[4,5,6]])\n",
+    "print(arr)\n",
+    "\n",
+    "print('\\nAddition:',arr+1) # one element added in every element \n",
+    "print('\\nsubtractoion:',arr-1)\n",
+    "print('\\nmultiplication:',arr*2)\n",
+    "print('\\nDivision:',arr/2)\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -3421,7 +3452,9 @@
    "id": "a8e84673",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# find the location of even number in my numpy array"
+   ]
   },
   {
    "cell_type": "code",
