--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -3296,7 +3296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd3c0615",
+   "id": "d9e3cbab",
    "metadata": {},
    "source": [
     "#### 3. Using hsplit()opposite of h stack()"
@@ -3360,7 +3360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da52865c",
+   "id": "2dd58102",
    "metadata": {},
    "source": [
     "###  Searching Arrays"
@@ -3368,7 +3368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5364f75b",
+   "id": "93565eec",
    "metadata": {},
    "source": [
     "### The \"where\" method is used for searching the array"
@@ -3376,7 +3376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9127d1bc",
+   "id": "75900b3d",
    "metadata": {},
    "source": [
     "#### 1. Where "
@@ -3448,12 +3448,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 234,
    "id": "a8e84673",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6 7 8]\n",
+      "Even number array: (array([1, 3, 5, 7], dtype=int64),)\n"
+     ]
+    }
+   ],
    "source": [
-    "# find the location of even number in my numpy array"
+    "# find the location of even number in my numpy array\n",
+    "arr = np.array([1,2,3,4,5,6,7,8])\n",
+    "\n",
+    "x = np.where(arr%2==0)\n",
+    "\n",
+    "print(arr)\n",
+    "print(\"Even number array:\",x)"
    ]
   },
   {
@@ -3462,7 +3477,12 @@
    "id": "910f2e56",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# find the location of odd number in numpy array \n",
+    "\n",
+    "arr=np.array([1,2,3,4,5,6,7,8,9,10,11])\n",
+    "loc+np.where(arr%2==1)"
+   ]
   },
   {
    "cell_type": "code",
