--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -3296,7 +3296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9e3cbab",
+   "id": "5e359c43",
    "metadata": {},
    "source": [
     "#### 3. Using hsplit()opposite of h stack()"
@@ -3360,7 +3360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dd58102",
+   "id": "47ae3a40",
    "metadata": {},
    "source": [
     "###  Searching Arrays"
@@ -3368,7 +3368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93565eec",
+   "id": "4a9c4d7d",
    "metadata": {},
    "source": [
     "### The \"where\" method is used for searching the array"
@@ -3376,7 +3376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75900b3d",
+   "id": "0f6dedcb",
    "metadata": {},
    "source": [
     "#### 1. Where "
@@ -3473,21 +3473,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 235,
    "id": "910f2e56",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "odd number location: (array([ 0,  2,  4,  6,  8, 10], dtype=int64),)\n"
+     ]
+    }
+   ],
    "source": [
     "# find the location of odd number in numpy array \n",
     "\n",
     "arr=np.array([1,2,3,4,5,6,7,8,9,10,11])\n",
-    "loc+np.where(arr%2==1)"
+    "loc=np.where(arr%2==1)\n",
+    "\n",
+    "print('odd number location:',loc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fec0b70",
+   "metadata": {},
+   "source": [
+    "### Searchshorted()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19c26dd7",
+   "metadata": {},
+   "source": [
+    "#### Perform a binary searchin the array and returens the index where the specified value would be inserted to martiain the search order "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c72bee6",
+   "metadata": {},
+   "source": [
+    "##### this method does not insert elements , it just returns a location for element in the numpy array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "id": "7646aafa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 7 8 9]\n",
+      "location where element to be inserted 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr=np.array([5,7,8,9])\n",
+    "\n",
+    "loc=np.searchsorted(arr,7,side='left')# >>\n",
+    "\n",
+    "print(arr)\n",
+    "print('location where element to be inserted',loc)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "id": "9ac7da62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "location where element to be inserted 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr=np.array([5,7,8,9])\n",
+    "\n",
+    "loc = np.searchsorted(arr,7,side='right')\n",
+    "print('location where element to be inserted',loc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
+   "id": "c21db2a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 7 8 9]\n",
+      "location where element to be inserted 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr=np.array([5,7,8,9])\n",
+    "\n",
+    "loc=np.searchsorted(arr,8.5,side ='right')\n",
+    "\n",
+    "print (arr)\n",
+    "\n",
+    "print('location where element to be inserted',loc)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "id": "1da3e8e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "location where elemet to be inserted [1 2 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# multiple values \n",
+    "\n",
+    "arr = np.array ([1,3,5,7])\n",
+    "x=np.searchsorted(arr,[2,4,6])\n",
+    "print('location where elemet to be inserted',x)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08236a5b",
+   "id": "099f9e6c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3495,7 +3621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db950dd7",
+   "id": "a2796a92",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3503,7 +3629,175 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6dda2241",
+   "id": "cfb63f7b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aba359a7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44060441",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a55b347",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b36bea3a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1848308",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5da6e38",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "442f5f46",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5527d8a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28b05abf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9e67c65",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c72b9064",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "130b5cb0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01a7d00c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f50755a0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "faf7c416",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a884b08",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ca52a72",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdfbb241",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d448ed7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37cca97e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62e5112b",
    "metadata": {},
    "outputs": [],
    "source": []
