sreaching sorted array

--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -3296,7 +3296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e359c43",
+   "id": "c552a94f",
    "metadata": {},
    "source": [
     "#### 3. Using hsplit()opposite of h stack()"
@@ -3360,7 +3360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47ae3a40",
+   "id": "8c194656",
    "metadata": {},
    "source": [
     "###  Searching Arrays"
@@ -3368,7 +3368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a9c4d7d",
+   "id": "d273d8e6",
    "metadata": {},
    "source": [
     "### The \"where\" method is used for searching the array"
@@ -3376,7 +3376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f6dedcb",
+   "id": "7d0bb6a0",
    "metadata": {},
    "source": [
     "#### 1. Where "
@@ -3496,7 +3496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fec0b70",
+   "id": "594ac403",
    "metadata": {},
    "source": [
     "### Searchshorted()"
@@ -3504,7 +3504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19c26dd7",
+   "id": "69629464",
    "metadata": {},
    "source": [
     "#### Perform a binary searchin the array and returens the index where the specified value would be inserted to martiain the search order "
@@ -3512,7 +3512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c72bee6",
+   "id": "4a93b623",
    "metadata": {},
    "source": [
     "##### this method does not insert elements , it just returns a location for element in the numpy array"
@@ -3521,7 +3521,7 @@
   {
    "cell_type": "code",
    "execution_count": 237,
-   "id": "7646aafa",
+   "id": "b74a9182",
    "metadata": {},
    "outputs": [
     {
@@ -3545,7 +3545,7 @@
   {
    "cell_type": "code",
    "execution_count": 239,
-   "id": "9ac7da62",
+   "id": "c9b5feb8",
    "metadata": {},
    "outputs": [
     {
@@ -3566,7 +3566,7 @@
   {
    "cell_type": "code",
    "execution_count": 241,
-   "id": "c21db2a9",
+   "id": "3d1af51a",
    "metadata": {},
    "outputs": [
     {
@@ -3591,7 +3591,7 @@
   {
    "cell_type": "code",
    "execution_count": 243,
-   "id": "1da3e8e8",
+   "id": "cefeb43c",
    "metadata": {},
    "outputs": [
     {
@@ -3611,9 +3611,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "01201cff",
+   "metadata": {},
+   "source": [
+    "### Sorting Arrays"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4509e37c",
+   "metadata": {},
+   "source": [
+    "### sorting means puting element in an ordered sequence like numric or alphabeticcal,ascending or descending \n",
+    "\n",
+    "### sort(), that will sort a specified array\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "099f9e6c",
+   "id": "6e08f033",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sort () on numerical array \n",
+    "\n",
+    "arr = np.array([])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6e72eba",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3621,7 +3651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2796a92",
+   "id": "5f42f226",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3629,7 +3659,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfb63f7b",
+   "id": "95fc599e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3637,7 +3667,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aba359a7",
+   "id": "cae17373",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3645,7 +3675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44060441",
+   "id": "3e60a9e3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3653,7 +3683,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a55b347",
+   "id": "57c95622",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3661,7 +3691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b36bea3a",
+   "id": "3275d51c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3669,7 +3699,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1848308",
+   "id": "a3d73f66",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3677,7 +3707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5da6e38",
+   "id": "744cbd6c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3685,7 +3715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "442f5f46",
+   "id": "67171807",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3693,7 +3723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5527d8a",
+   "id": "6e70099a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3701,7 +3731,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28b05abf",
+   "id": "0d0b54ce",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3709,7 +3739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9e67c65",
+   "id": "1db5716b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3717,7 +3747,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c72b9064",
+   "id": "b1f27648",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3725,7 +3755,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "130b5cb0",
+   "id": "9b794f82",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3733,7 +3763,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01a7d00c",
+   "id": "10ca4ad3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3741,7 +3771,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f50755a0",
+   "id": "ff57cb82",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3749,7 +3779,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "faf7c416",
+   "id": "60b30428",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3757,7 +3787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a884b08",
+   "id": "c41ec072",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3765,7 +3795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ca52a72",
+   "id": "a9ac8528",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3773,31 +3803,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdfbb241",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0d448ed7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37cca97e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "62e5112b",
+   "id": "bff41c4d",
    "metadata": {},
    "outputs": [],
    "source": []
