--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -3296,7 +3296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c552a94f",
+   "id": "67857366",
    "metadata": {},
    "source": [
     "#### 3. Using hsplit()opposite of h stack()"
@@ -3360,7 +3360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c194656",
+   "id": "3049fac5",
    "metadata": {},
    "source": [
     "###  Searching Arrays"
@@ -3368,7 +3368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d273d8e6",
+   "id": "cfc9de0d",
    "metadata": {},
    "source": [
     "### The \"where\" method is used for searching the array"
@@ -3376,7 +3376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d0bb6a0",
+   "id": "0c923dc3",
    "metadata": {},
    "source": [
     "#### 1. Where "
@@ -3496,7 +3496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "594ac403",
+   "id": "c6d76b3c",
    "metadata": {},
    "source": [
     "### Searchshorted()"
@@ -3504,7 +3504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69629464",
+   "id": "788a7657",
    "metadata": {},
    "source": [
     "#### Perform a binary searchin the array and returens the index where the specified value would be inserted to martiain the search order "
@@ -3512,7 +3512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a93b623",
+   "id": "355e52ff",
    "metadata": {},
    "source": [
     "##### this method does not insert elements , it just returns a location for element in the numpy array"
@@ -3521,7 +3521,7 @@
   {
    "cell_type": "code",
    "execution_count": 237,
-   "id": "b74a9182",
+   "id": "1172503a",
    "metadata": {},
    "outputs": [
     {
@@ -3545,7 +3545,7 @@
   {
    "cell_type": "code",
    "execution_count": 239,
-   "id": "c9b5feb8",
+   "id": "3d650caf",
    "metadata": {},
    "outputs": [
     {
@@ -3566,7 +3566,7 @@
   {
    "cell_type": "code",
    "execution_count": 241,
-   "id": "3d1af51a",
+   "id": "6d04e5c5",
    "metadata": {},
    "outputs": [
     {
@@ -3591,7 +3591,7 @@
   {
    "cell_type": "code",
    "execution_count": 243,
-   "id": "cefeb43c",
+   "id": "926ae882",
    "metadata": {},
    "outputs": [
     {
@@ -3612,7 +3612,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01201cff",
+   "id": "b6b5a84d",
    "metadata": {},
    "source": [
     "### Sorting Arrays"
@@ -3620,7 +3620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4509e37c",
+   "id": "e21413c5",
    "metadata": {},
    "source": [
     "### sorting means puting element in an ordered sequence like numric or alphabeticcal,ascending or descending \n",
@@ -3630,20 +3630,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6e08f033",
+   "execution_count": 245,
+   "id": "5e91d215",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input array [3 2 0 1]\n",
+      "Sorted Array [0 1 2 3]\n"
+     ]
+    }
+   ],
    "source": [
     "# sort () on numerical array \n",
     "\n",
-    "arr = np.array([])"
+    "arr = np.array([3,2,0,1])\n",
+    "res=np.sort(arr)\n",
+    "print(\"input array\",arr)\n",
+    "print('Sorted Array',res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "id": "b86ea46b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input array  [0 1 2 3]\n",
+      "sorted array [0 1 2 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sort () on string array\n",
+    "\n",
+    "arr = np.sort (arr)\n",
+    "\n",
+    "print('input array ',arr)\n",
+    "print('sorted array',res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "id": "10ed230a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input Array ['banana' 'cherry' 'apple']\n",
+      "Sorted Array ['apple' 'banana' 'cherry']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sort() on string array\n",
+    "arr = np.array(['banana', 'cherry', 'apple'])\n",
+    "\n",
+    "res = np.sort(arr)\n",
+    "\n",
+    "print('Input Array',arr)\n",
+    "\n",
+    "print('Sorted Array',res)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6e72eba",
+   "id": "58a102fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sort ()on 2d array\n",
+    "\n",
+    "arr = np.array([[3,2,4],[5,0,1]])\n",
+    "res=np.sort(arr)\n",
+    "\n",
+    "pr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "baaa8807",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3651,7 +3728,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f42f226",
+   "id": "dfc9dc8a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3659,7 +3736,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95fc599e",
+   "id": "00382d7d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3667,7 +3744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cae17373",
+   "id": "65165f38",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3675,7 +3752,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e60a9e3",
+   "id": "fd94f5cc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3683,7 +3760,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57c95622",
+   "id": "43bd5a47",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3691,7 +3768,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3275d51c",
+   "id": "69c12224",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3699,7 +3776,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3d73f66",
+   "id": "96ac167a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3707,7 +3784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "744cbd6c",
+   "id": "7aabb316",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3715,7 +3792,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67171807",
+   "id": "ea9c72df",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3723,7 +3800,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e70099a",
+   "id": "2cc6baf8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3731,7 +3808,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d0b54ce",
+   "id": "9116fb43",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3739,7 +3816,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1db5716b",
+   "id": "327f3612",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3747,7 +3824,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1f27648",
+   "id": "6226eda6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3755,7 +3832,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b794f82",
+   "id": "141b518e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3763,7 +3840,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10ca4ad3",
+   "id": "1efb9600",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3771,7 +3848,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff57cb82",
+   "id": "187d0d0f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3779,31 +3856,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60b30428",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c41ec072",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a9ac8528",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bff41c4d",
+   "id": "ba365aca",
    "metadata": {},
    "outputs": [],
    "source": []
