--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -3780,21 +3780,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 126,
    "id": "83bc22d9",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AxisError",
-     "evalue": "axis 1 is out of bounds for array of dimension 1",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAxisError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [124], line 6\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Creat a 2d array\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# sort the rows of the array along axis 1\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m sorted_array \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msort\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m,sorted_array)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m#sort the column of the array alaong axis 0\u001b[39;00m\n",
-      "File \u001b[1;32m<__array_function__ internals>:200\u001b[0m, in \u001b[0;36msort\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\numpy\\core\\fromnumeric.py:1030\u001b[0m, in \u001b[0;36msort\u001b[1;34m(a, axis, kind, order)\u001b[0m\n\u001b[0;32m   1028\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   1029\u001b[0m     a \u001b[38;5;241m=\u001b[39m asanyarray(a)\u001b[38;5;241m.\u001b[39mcopy(order\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mK\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m-> 1030\u001b[0m \u001b[43ma\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msort\u001b[49m\u001b[43m(\u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkind\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mkind\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43morder\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43morder\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1031\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m a\n",
-      "\u001b[1;31mAxisError\u001b[0m: axis 1 is out of bounds for array of dimension 1"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " [[2 3 4]\n",
+      " [1 5 6]\n",
+      " [7 8 9]]\n",
+      "\n",
+      " [[1 2 4]\n",
+      " [3 5 6]\n",
+      " [9 7 8]]\n"
      ]
     }
    ],
@@ -3802,6 +3803,9 @@
     "import numpy as np\n",
     "\n",
     "# Creat a 2d array\n",
+    "a = np.array([[3,2,4],\n",
+    "             [1,5,6],\n",
+    "             [9,7,8]])\n",
     "\n",
     "# sort the rows of the array along axis 1\n",
     "sorted_array = np.sort(a,axis=1)\n",
@@ -3812,20 +3816,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e52326c6",
+   "cell_type": "markdown",
+   "id": "2e6faf31",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Filter Array"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "752d9703",
+   "cell_type": "markdown",
+   "id": "2840a38f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### 1.Getting some elements out of an exiting array and creating a new array out them is called filtering\n",
+    "\n",
+    "#### 2. Numpy filter an array using boolean list \n",
+    "\n",
+    "#### 3. A boolean index list is a list booleans corresponding to indexes ain the array"
+   ]
   },
   {
    "cell_type": "code",
@@ -3833,7 +3841,10 @@
    "id": "d3080670",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "arr=np.array([1,2,3,4,5])\n",
+    "x=[True,False]"
+   ]
   },
   {
    "cell_type": "code",
