--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -3817,7 +3817,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e6faf31",
+   "id": "cf46c2be",
    "metadata": {},
    "source": [
     "## Filter Array"
@@ -3825,7 +3825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2840a38f",
+   "id": "0eade224",
    "metadata": {},
    "source": [
     "#### 1.Getting some elements out of an exiting array and creating a new array out them is called filtering\n",
@@ -3837,13 +3837,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "id": "d3080670",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 3 5]\n"
+     ]
+    }
+   ],
    "source": [
     "arr=np.array([1,2,3,4,5])\n",
-    "x=[True,False]"
+    "x=[True,False,True,False,True]\n",
+    "\n",
+    "newarr =arr[x]\n",
+    "print(newarr)"
    ]
   },
   {
@@ -3852,7 +3863,15 @@
    "id": "67081ddb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "arr=np.array([1,2,3,4,5,6,,7,8,9,10])\n",
+    "print(arr)\n",
+    "# creat an empty list\n",
+    "index=[]\n",
+    "\n",
+    "# go through element in arr\n",
+    "for "
+   ]
   },
   {
    "cell_type": "code",
